fix build aws-cli

--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,2 +1,3 @@
 FROM amazon/aws-cli
-RUN yum install jq -y && amazon-linux-extras install docker
+RUN yum install jq -y 
+RUN amazon-linux-extras install docker
